objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Opt_Product_Updates__c</fullName>
        <label>OptIn Product Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Status__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact Owner Status. True for Active.</inlineHelpText>
        <label>Owner Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pendo_Account_ID__c</fullName>
        <label>Pendo_Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pendo_NPS_Score_from_Pendo__c</fullName>
        <label>Pendo_&quot;NPS Score from Pendo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pendo_VisitorID__c</fullName>
        <label>Pendo_Visitor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_a_Date__c</fullName>
        <description>Created for Dreamforce RSVP Forms in Pardot.</description>
        <inlineHelpText>Happy Hour Form Date.</inlineHelpText>
        <label>Pick a Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday, September 20</fullName>
                </value>
                <value>
                    <fullName>Wednesday, September 21</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_AR_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary AR Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Contact_Status__c</fullName>
        <inlineHelpText>Previous Contact Status we had before it changed to the current one.</inlineHelpText>
        <label>Prior Contact Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No BANT</fullName>
                </value>
                <value>
                    <fullName>Needs Nurturing</fullName>
                </value>
                <value>
                    <fullName>No Product Fit</fullName>
                </value>
                <value>
                    <fullName>Not Salesforce Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Lost__c</fullName>
        <description>Lost Reason when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
        <inlineHelpText>Lost Reason when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
        <label>Reason for Lost</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by the Customer Success Team.</inlineHelpText>
        <label>Referenceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_Notes__c</fullName>
        <label>SDR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amrita Sen</fullName>
                </value>
                <value>
                    <fullName>Arvind</fullName>
                    <label>Arvind Tripathy</label>
                </value>
                <value>
                    <fullName>Belinda Trevor</fullName>
                </value>
                <value>
                    <fullName>Christina Blanco</fullName>
                </value>
                <value>
                    <fullName>Kainaz Dara Patel</fullName>
                </value>
                <value>
                    <fullName>Krishna Chaitanya</fullName>
                </value>
                <value>
                    <fullName>Matt P</fullName>
                </value>
                <value>
                    <fullName>Nick_Garcia</fullName>
                    <label>Nick Garcia</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Sherdah_Moca</fullName>
                    <label>Sherdah Moca</label>
                </value>
                <value>
                    <fullName>Shiva_Kumar_Gatla</fullName>
                    <isActive>false</isActive>
                    <label>Shiva Kumar Gatla</label>
                </value>
                <value>
                    <fullName>Venkatesh T</fullName>
                    <isActive>false</isActive>
                    <label>Venkatesh T</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sequence_Owner_Record_Owner_same__c</fullName>
        <formula>If( ( Current_Sequence_User_Name__c = (  Owner.FirstName  &amp;  Owner.LastName   ) ), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To see if Outreach.io Serquence Owner and Contact Owner are same or not.</inlineHelpText>
        <label>Sequence Owner &amp; Record Owner same?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Package__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>Success Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Success_Package</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Record_Owner__c</fullName>
        <formula>CASESAFEID(IF(Account.SDR_Owner__r.IsActive = true &amp;&amp; NOT(ISBLANK(Account.SDR_Owner__c)),  Account.SDR_Owner__c,
IF(Account.Owner.IsActive = true &amp;&amp; NOT(ISBLANK(Account.OwnerId)), Account.OwnerId,
&apos;0050K00000BQdcGQAT&apos;)))</formula>
        <label>Suggested Record Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_End_Date__c</fullName>
        <label>Support End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Start_Date__c</fullName>
        <label>Support Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <description>Used to tag people for later tracking/reporting</description>
        <inlineHelpText>Used to tag people for later tracking/reporting</inlineHelpText>
        <label>Tag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>Enter the Time Zone of the client (Ex: EST, PST, IST etc.)</inlineHelpText>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category_Score__c</fullName>
        <description>Score of the title category.</description>
        <label>Title Category Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Tin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Category__c</fullName>
        <label>Title Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Level__c</fullName>
        <label>Title Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Score__c</fullName>
        <inlineHelpText>Use this field to mark the score for the Contact Title.</inlineHelpText>
        <label>Title Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Tin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wrong_Owner__c</fullName>
        <formula>(OwnerId &lt;&gt; BLANKVALUE( Account.SDR_Owner__c , Account.OwnerId)) &amp;&amp; (LEFT(OwnerId, 3)=&quot;005&quot;)</formula>
        <label>Wrong Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Lead_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;1-Lead&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;1-Lead&quot;.</inlineHelpText>
        <label>1-Lead Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1_Lead_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;1-Lead&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;1-Lead&quot;.</inlineHelpText>
        <label>1-Lead Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2_Subscriber_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;2-Subscriber&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;2-Subscriber&quot;.</inlineHelpText>
        <label>2-Subscriber Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X2_Subscriber_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;2-Subscriber&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;2-Subscriber&quot;.</inlineHelpText>
        <label>2-Subscriber Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3_Prospect_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;3-Prospect&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;3-Prospect&quot;.</inlineHelpText>
        <label>3-Prospect Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3_Prospect_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;3-Prospect&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;3-Prospect&quot;.</inlineHelpText>
        <label>3-Prospect Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4_MQL_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;4-MQL&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;4-MQL&quot;.</inlineHelpText>
        <label>4-MQL Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4_MQL_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;4-MQL&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;4-MQL&quot;.</inlineHelpText>
        <label>4-MQL Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5_Intro_Call_Scheduled_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;5-Intro Call Scheduled&quot;</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;5-Intro Call Scheduled&quot;</inlineHelpText>
        <label>5-Intro Call Scheduled Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5_Intro_Call_Scheduled_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;5-Intro Call Scheduled&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;5-Intro Call Scheduled&quot;.</inlineHelpText>
        <label>5-Intro Call Scheduled Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X6_Intro_Call_Held_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;6-Intro Call Held&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved into &quot;6-Intro Call Held&quot;.</inlineHelpText>
        <label>6-Intro Call Held Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X6_Intro_Call_Held_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;6-Intro Call Held&quot;.</description>
        <inlineHelpText>Date Contact, Contact Status moved out of &quot;6-Intro Call Held&quot;.</inlineHelpText>
        <label>6-Intro Call Held Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZI_Company_ID__c</fullName>
        <description>This is company ID for Zoom Info</description>
        <label>ZI Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Name__c</fullName>
        <label>ZI Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Last_Verified_Date__c</fullName>
        <label>ZI Last Verified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Email__c</fullName>
        <description>We use this field to overwrite the email id every time we enrich the record with ZoomInfo.</description>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Phone__c</fullName>
        <description>We use this field to overwrite the phone # every time we enrich the record with ZoomInfo.</description>
        <label>ZoomInfo Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_State__c</fullName>
        <description>We use this field to get the State from Zoominfo as text since we have State as picklist values and CRM State values are always matching with ZoomInfo State values.</description>
        <label>ZoomInfo State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_URL__c</fullName>
        <description>URL to the person&apos;s ZoomInfo profile</description>
        <label>ZoomInfo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>algnlta__Lock_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the contact will be &quot;locked&quot; and it&apos;s email domain will not be summarized on the account.</description>
        <inlineHelpText>If checked, the contact will be &quot;locked&quot; and it&apos;s email domain will not be summarized on the account.</inlineHelpText>
        <label>Lock Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLinked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLinked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Account Engagement Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Account Engagement and are available to customers using Account Engagement Pro Edition and Account Engagement Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Account Engagement Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Account Engagement Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Account Engagement campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Account Engagement Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Account Engagement Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when an Account Engagement tracked anonymous visitor first became a known prospect.</description>
        <label>Account Engagement Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
        <label>Account Engagement Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Account Engagement First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Account Engagement First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Account Engagement First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Account Engagement First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Account Engagement grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Account Engagement Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Account Engagement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Account Engagement Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Account Engagement score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Account Engagement. From there you can view his or her complete activity history. This URL is generated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Contacts_List</fullName>
        <columns>PARENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
        <columns>Account.SDR_Owner__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.ACCOUNT_SOURCE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dtipp</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/15/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Allianz (nether</value>
        </filters>
        <label>All Contacts List</label>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bad_Phone_Contacts_to_Enrich</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Contact_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Call_Disposition__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>SDR_Notes__c</columns>
        <columns>MA_Notes__c</columns>
        <columns>MA_Review_Date__c</columns>
        <columns>Current_Sequence_Name__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Bad Email &amp; Bad Phone,Bad Phone</value>
        </filters>
        <filters>
            <field>Call_Disposition__c</field>
            <operation>contains</operation>
            <value>Bad Phone,Bad Mobile,No Number Present</value>
        </filters>
        <label># Bad Phone Contacts to Enrich</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
            <role>VP_of_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Pre_Launch_popup</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Account.ABM_Key_Account_Current__c</columns>
        <columns>Account.ABM_Key_Account_Current_Date__c</columns>
        <columns>Contact_Rating__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>Contact_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Sequence_Name__c</field>
            <operation>equals</operation>
            <value>,None</value>
        </filters>
        <label>#CPQ Pre-Launch popup</label>
        <sharedTo>
            <role>General_and_Administrative</role>
            <role>Inbound_SDR</role>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContactsToDelete</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Stage__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Delete from CRM</value>
        </filters>
        <label>#ContactsToDelete</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ContactsToRefine</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR (3 AND 4)</booleanFilter>
        <columns>MA_Review_Date__c</columns>
        <columns>MA_Notes__c</columns>
        <columns>SDR_Notes__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Call_Disposition__c</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Stage__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Bad Email,Bad Email &amp; Bad Phone,Bad Phone,Changed Organization</value>
        </filters>
        <filters>
            <field>Delete_From_CRM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Call_Disposition__c</field>
            <operation>contains</operation>
            <value>Bad Phone,Bad Mobile,No Number Present</value>
        </filters>
        <label>#ContactsToRefine</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Europe_Customer_Contacts</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Navneeth,Sundeep</value>
        </filters>
        <label>Europe Customer Contacts</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Event_Contact_Assignment</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>#Event Contact Assignment</label>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
</CustomObject>